@@ -1,0 +1,26 @@
+#!/usr/local/bin/perl
+#
+# Test image blobs.
+#
+BEGIN { $| = 1; $test=1, print "1..1\n"; }
+END {print "not ok 1\n" unless $loaded;}
+use Image::Magick;
+$loaded=1;
+
+chdir 't' || die 'Cd failed';
+
+$image = new Image::Magick;
+$image->Read( 'input.miff' );
+@blob = $image->ImageToBlob();
+undef $image;
+
+$image=Image::Magick->new( magick=>'MIFF' );
+$image->BlobToImage( @blob );
+
+if ($image->Get('signature') ne 
+    'a5d122b2b7a0944d835243afd4a81815bbea5bc1ae6c3a6ba79301662b4474a1')
+  { print "not ok $test\n"; }
+else
+  { print "ok $test\n"; }
+
+1;
